--- a/src/components/short-meal/styles.module.css
+++ b/src/components/short-meal/styles.module.css
@@ -3,14 +3,14 @@
     margin: 0;
     padding: 0;
   }
-  .dishes_container {
+  .components_container {
     display: flex;
     flex-wrap: wrap;
     row-gap: 8px;
     column-gap: 8px;
     padding-top: 8px;
 
-    .dish_item {
+    .component_item {
       display: flex;
       flex-direction: column;
       align-items: center;
