--- a/src/pages/ingredient/styles.module.css
+++ b/src/pages/ingredient/styles.module.css
@@ -6,6 +6,11 @@
 	display: flex;
 	column-gap: 8px;
 	align-items: center;
+
+	h1 {
+		display: flex;
+		align-items: center;
+	}
 }
 
 .titleContainer h1 {
