--- a/src/pages/meal/styles.module.css
+++ b/src/pages/meal/styles.module.css
@@ -6,10 +6,11 @@
   display: flex;
   column-gap: 8px;
   align-items: center;
-}
-
-.titleContainer h1 {
-  text-align: center;
+  h1 {
+    text-align: center;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .mealsContainer {
