Added get pages for dishes and meals

--- a/src/components/meal-details/styles.module.css
+++ b/src/components/meal-details/styles.module.css
@@ -10,6 +10,11 @@
     column-gap: 8px;
     padding-top: 8px;
 
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
     .component_item {
       display: flex;
       flex-direction: column;
