Meal relative time

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 	--color-background-light: #171536;
 	--color-gray: #4A5057;
 	--color-primary: #ff00ee;
+	--color-secondary: #00f7ff;
 }
 
 body, html {
