--- a/src/pages/ingredient/styles.module.css
+++ b/src/pages/ingredient/styles.module.css
@@ -1,25 +1,40 @@
 .main {
-	padding: 16px;
+  padding: 16px;
 }
 
 .titleContainer {
-	display: flex;
-	column-gap: 8px;
-	align-items: center;
+  display: flex;
+  column-gap: 8px;
+  align-items: center;
 
-	h1 {
-		display: flex;
-		align-items: center;
-	}
+  h1 {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .titleContainer h1 {
-	text-align: center;
+  text-align: center;
 }
 
 .ingredientsContainer {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	row-gap: 16px;
- }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  row-gap: 16px;
+}
+
+.shortDishMain {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid var(--color-gray);
+  padding: 8px;
+  border-radius: 8px;
+
+  .creationDate {
+    color: var(--color-gray);
+    border-left: 2px solid var(--color-gray);
+    padding-left: 8px;
+    margin-left: 8px;
+  }
+}
